--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "hexlet-code"
 version = "0.1.0"
 description = ""
-authors = ["skarj <sergey.baranov@friendsurance.de>"]
+authors = ["skarj <skaarj.sergey@gmail.com>"]
 readme = "README.md"
 packages = [
   { include = "brain_games" },
@@ -14,6 +14,7 @@ prompt = "^0.4.1"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
