--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ python = "^3.10"
 prompt = "^0.4.1"
 
 [tool.poetry.scripts]
-brain-games = "brain_games.scripts.brain_games:main"
-brain-even = "brain_games.scripts.brain_even:main"
+brain-games = "brain_games.games.games:main"
+brain-even = "brain_games.games.even:main"
+brain-calc = "brain_games.games.calc:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
