--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ prompt = "^0.4.1"
 brain-games = "brain_games.games.games:main"
 brain-even = "brain_games.games.even:main"
 brain-calc = "brain_games.games.calc:main"
+brain-gcd = "brain_games.games.gcd:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
