--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ brain-games = "brain_games.games.games:main"
 brain-even = "brain_games.games.even:main"
 brain-calc = "brain_games.games.calc:main"
 brain-gcd = "brain_games.games.gcd:main"
+brain-progression = "brain_games.games.progression:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
