--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.1.0"
-description = ""
+version = "1.0.0"
+description = "Math games to train your brain"
 authors = ["skarj <skaarj.sergey@gmail.com>"]
 readme = "README.md"
 packages = [
@@ -13,12 +13,11 @@ python = "^3.10"
 prompt = "^0.4.1"
 
 [tool.poetry.scripts]
-brain-games = "brain_games.games.games:main"
-brain-even = "brain_games.games.even:main"
-brain-calc = "brain_games.games.calc:main"
-brain-gcd = "brain_games.games.gcd:main"
-brain-progression = "brain_games.games.progression:main"
-brain-prime = "brain_games.games.prime:main"
+brain-even = "brain_games.scrits.brain_even:main"
+brain-calc = "brain_games.scrits.brain_calc:main"
+brain-gcd = "brain_games.scrits.brain_gcd:main"
+brain-progression = "brain_games.scrits.brain_progression:main"
+brain-prime = "brain_games.scrits.brain_prime:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
