--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hexlet-code"
+name = "brain-games"
 version = "1.0.0"
 description = "Math games to train your brain"
 authors = ["skarj <skaarj.sergey@gmail.com>"]
@@ -13,11 +13,11 @@ python = "^3.10"
 prompt = "^0.4.1"
 
 [tool.poetry.scripts]
-brain-even = "brain_games.scrits.brain_even:main"
-brain-calc = "brain_games.scrits.brain_calc:main"
-brain-gcd = "brain_games.scrits.brain_gcd:main"
-brain-progression = "brain_games.scrits.brain_progression:main"
-brain-prime = "brain_games.scrits.brain_prime:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-progression = "brain_games.scripts.brain_progression:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
