--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "brain-games"
+name = "hexlet-code"
 version = "1.0.0"
 description = "Math games to train your brain"
 authors = ["skarj <skaarj.sergey@gmail.com>"]
