--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "hexlet-code"
 version = "1.0.0"
 description = "Math games to train your brain"
 authors = ["skarj <skaarj.sergey@gmail.com>"]
+classifiers = ["Topic :: Games/Entertainment"]
 readme = "README.md"
 packages = [
   { include = "brain_games" },
@@ -13,6 +14,7 @@ python = "^3.10"
 prompt = "^0.4.1"
 
 [tool.poetry.scripts]
+brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
